[gd_scene load_steps=15 format=3 uid="uid://cithacfag1tvr"]

[ext_resource type="Texture2D" uid="uid://4sfe2qle2bc4" path="res://textures/broc-removebg-preview - Copy.png" id="1_3kblh"]
[ext_resource type="Script" path="res://player/player.gd" id="1_13j26"]
[ext_resource type="PackedScene" uid="uid://do408jmicve72" path="res://Utility/hurtbox.tscn" id="4_0kjec"]
[ext_resource type="Texture2D" uid="uid://cl4nxpyududv6" path="res://textures/GUI/exp_background.png" id="4_063pj"]
[ext_resource type="Texture2D" uid="uid://cntx1k4703fbv" path="res://textures/GUI/exp_progress.png" id="5_thaob"]
[ext_resource type="FontFile" uid="uid://wiam8m1mv1x0" path="res://Font/tenderness.otf" id="6_din3k"]
[ext_resource type="AudioStream" uid="uid://bpgnw7q1simjt" path="res://audio/soundEffects/levelup.ogg" id="7_f71f2"]
[ext_resource type="Texture2D" uid="uid://8euc4k18k8x1" path="res://textures/GUI/healthbar.png" id="8_i743x"]
[ext_resource type="Texture2D" uid="uid://8ucbh6u32rpd" path="res://textures/GUI/health.png" id="9_ksyhv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_srs4w"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyn2y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_baho7"]
radius = 9200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jevx2"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l2xod"]

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.04, 0.04)
motion_mode = 1
script = ExtResource("1_13j26")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_3kblh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 22)
shape = SubResource("CircleShape2D_srs4w")

[node name="Hurtbox" parent="." instance=ExtResource("4_0kjec")]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_jyn2y")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_baho7")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_jevx2")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_l2xod")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_063pj")
texture_progress = ExtResource("5_thaob")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_din3k")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 50.0
texture_over = ExtResource("8_i743x")
texture_progress = ExtResource("9_ksyhv")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_din3k")
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_f71f2")
volume_db = -10.0

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_din3k")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="Hurtbox"]
